# Meta_ai

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test_api.py  test_inference.py  test_reset.py
grader/: grader.py
server/: __init__.py  app.py
smart_waste_env/: __init__.py  environment.py  grader.py  inference.py  init.py  models.py  tasks.py
smart_waste_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
smart_waste_env/server/: app.py  environment.py
smart_waste_env/tasks/: medium.py
tasks/: easy.py  hard.py
