[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-waste-env"
version = "0.1.0"
description = "Smart Waste Management RL Environment using OpenEnv"
authors = [
    { name = "Nagasri" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openenv-core"
]
requires-python = ">=3.10"

# 🔥 IMPORTANT ADD THIS
[project.scripts]
server = "server.app:start"

[tool.setuptools.packages.find]
where = ["."]
include = ["smart_waste_env*"]