[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-waste-env"
version = "0.1.0"
description = "Smart Waste Management RL Environment"
authors = [{ name = "Nagasri" }]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
]
requires-python = ">=3.10"

[project.scripts]
server = "server.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]